fixed the overflow in mouseover and the white line on the cs pic

--- a/src/app/csgo/csgo.component.css
+++ b/src/app/csgo/csgo.component.css
@@ -1,6 +1,7 @@
 .blocktest{
     width:100%;
     height:100vh;
+    overflow: hidden;
 }
 .imageCS{
     background: url('../../assets/cs.jpg') no-repeat center center; 
