--- a/src/app/dota/dota.component.css
+++ b/src/app/dota/dota.component.css
@@ -1,6 +1,7 @@
 .blocktest{
     width:100%;
     height:100vh;
+    overflow: hidden;
 }
 .imageCS{
     background: url('../../assets/dota.jpg') no-repeat center center; 
